[gd_scene load_steps=2 format=3 uid="uid://xoobyegsmqi"]

[ext_resource type="Script" path="res://Enemies/Ogre/OgreAttack/OgreAttack.gd" id="1_3hm60"]

[node name="OgreAttack" type="Node2D"]
script = ExtResource("1_3hm60")

[node name="AttackStopTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AttackSegments" type="Node2D" parent="."]

[connection signal="timeout" from="AttackStopTimer" to="." method="_on_attack_stop_timer_timeout"]
